objects/Sales_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Br_Transfer_Depot__c</fullName>
        <label>Br Transfer Depot</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
</CustomObject>